# whitelisting-tools-for-modsecurity

./: .gitignore  AUTHORS  Makefile  Makefile.am  README  README.md  configure.ac  crs_to_rulesdata.pl  database.conf  headerlines_vector_pair.cpp  headerlines_vector_pair.h  logchop.cpp  logchop.h  main.cpp  makefile  modsecurity-whitelister.pro  prompt_inputs.cpp  prompt_inputs.h  rulesdata.conf  template.sql  views.sql
debian/: changelog  control  copyright  rules
doc/: Makefile.am  auditlog2db.man
src/: Makefile  Makefile.am  auditlogdatabase.cpp  auditlogdatabase.h  auditlogrecord.cpp  auditlogrecord.h  auditlogrecord_auditlogheader.cpp  auditlogrecord_auditlogheader.h  auditlogrecord_requestheaders.cpp  auditlogrecord_requestheaders.h  auditlogrecord_responseheaders.cpp  auditlogrecord_responseheaders.h  databaseconfig.cpp  databaseconfig.h  get_unordered_map.cpp  get_unordered_map.h  headerlines.cpp  headerlines.h  help.cpp  help.h  logchop.cpp  logchop.h  main.cpp  prompt_inputs.cpp  prompt_inputs.h  ruledata.h  userdefinedheaderpart.cpp  userdefinedheaderpart.h
